AKS/6-site-2-location-lab/east-site3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer3-service  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer3-service
  template:
    metadata:
      labels:
        app: customer3-service
    spec:
      containers:
      - name: customer3-service
        image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: customer3-service  
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: customer3-service
