AKS/6-site-2-location-lab/east-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: customer1.mike-demo.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: customer1-service
                port:
                  number: 80
    - host: customer2.mike-demo.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: customer2-service
                port:
                  number: 80
    - host: customer3.mike-demo.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: customer3-service
                port:
                  number: 80
